--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
-    "test": "jest --watchAll",
+    "test": "jest",
     "analyze": "source-map-explorer dist/main.*"
   },
   "repository": {
